@@ -490,7 +490,7 @@ class TestSelectOptions(QueryParserTestBase):
 class TestBalances(QueryParserTestBase):
 
     def test_balances_empty(self):
-        self.assertParse(qp.Balances(None, None),
+        self.assertParse(qp.Balances(None, None, None),
                          "BALANCES;")
 
     def test_balances_from(self):
@@ -498,7 +498,8 @@ class TestBalances(QueryParserTestBase):
             qp.Balances(None,
                         qp.From(qp.Equal(qp.Column('date'),
                                          qp.Constant(datetime.date(2014, 1, 1))),
-                                None, True, None)),
+                                None, True, None),
+                        None),
             "BALANCES FROM date = 2014-01-01 CLOSE;")
 
     def test_balances_from_with_transformer(self):
@@ -506,8 +507,17 @@ class TestBalances(QueryParserTestBase):
             qp.Balances('units',
                         qp.From(qp.Equal(qp.Column('date'),
                                          qp.Constant(datetime.date(2014, 1, 1))),
-                                None, True, None)),
+                                None, True, None),
+                        None),
             "BALANCES AT units FROM date = 2014-01-01 CLOSE;")
+
+    def test_balances_from_with_transformer(self):
+        self.assertParse(
+            qp.Balances('units',
+                        None,
+                        qp.Equal(qp.Column('date'),
+                                 qp.Constant(datetime.date(2014, 1, 1)))),
+            "BALANCES AT units WHERE date = 2014-01-01;")
 
 
 class TestJournal(QueryParserTestBase):
@@ -586,7 +596,7 @@ class TestExplain(QueryParserTestBase):
 
     def test_explain_balances(self):
         self.assertParse(qp.Explain(
-            qp.Balances('cost', None)
+            qp.Balances('cost', None, None)
             ), "EXPLAIN BALANCES AT cost;")
 
     def test_explain_journal(self):
